envoy-gateway/backend.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend
  labels:
    app: backend
    service: backend
spec:
  ports:
    - name: http
      port: 3000
      targetPort: 3000
  selector:
    app: backend
---
apiVersion: v1
kind: Service
metadata:
  name: backend-headless
  labels:
    app: backend
    service: backend
spec:
  clusterIP: None
  ports:
    - name: http
      port: 3000
      targetPort: 3000
  selector:
    app: backend
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: backend
      version: v1
  template:
    metadata:
      labels:
        app: backend
        version: v1
    spec:
      serviceAccountName: backend
      containers:
        - image: registry.k8s.io/gateway-api/conformance/echo-basic:v0.1.0
          imagePullPolicy: IfNotPresent
          name: backend
          ports:
            - containerPort: 3000
---
