envoy-gateway/infra-backend.yaml
apiVersion: v1
kind: Service
metadata:
  name: infra-backend
spec:
  selector:
    app: infra-backend
  ports:
    - name: first-port
      protocol: TCP
      port: 8080
      targetPort: 3000
    - name: second-port
      protocol: TCP
      appProtocol: kubernetes.io/h2c
      port: 8081
      targetPort: 3001
    - name: third-port
      protocol: TCP
      appProtocol: kubernetes.io/ws
      port: 8082
      targetPort: 3000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: infra-backend
  labels:
    app: infra-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: infra-backend
  template:
    metadata:
      labels:
        app: infra-backend
    spec:
      containers:
        - name: infra-backend
          # Originally from https://github.com/kubernetes-sigs/ingress-controller-conformance/tree/master/images/echoserver
          image: gcr.io/k8s-staging-gateway-api/echo-basic:v20240412-v1.0.0-394-g40c666fd
          resources:
            requests:
              cpu: 10m
