envoy-gateway/tls-backend.yaml
apiVersion: v1
kind: Service
metadata:
  name: tls-backend
spec:
  selector:
    app: tls-backend
  ports:
    - name: https
      protocol: TCP
      port: 443
      targetPort: 8443
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tls-backend
  labels:
    app: tls-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tls-backend
  template:
    metadata:
      labels:
        app: tls-backend
    spec:
      containers:
        - name: tls-backend
          image: registry.k8s.io/gateway-api/conformance/echo-basic:v0.1.0
          volumeMounts:
            - name: secret-volume
              mountPath: /etc/secret-volume
          resources:
            requests:
              cpu: 10m
      volumes:
        - name: secret-volume
          secret:
            secretName: example-cert
            items:
              - key: tls.crt
                path: crt
              - key: tls.key
                path: key
